--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   <body>
   <!-- logo, button -->
     <div class="row valign-wrapper">
+    <!-- Logo -->
       <div class="col s12 l8">
-        <h3>LOGO</h3>
+        <a href="http://www.sociolla.com/" title="Sociolla">
+          <img class="logo img-responsive" src="http://img.sociolla.com/img/sociolla-1451533301.jpg" alt="Sociolla" style="width:170px;">
+        </a>
       </div>
+
       <div class="col s12 l4 valign">
         <form action="companyProfile" method="post" id="companyProfileForm" name="companyProfileForm">
         <div class="row right-align valign-wrapper">
