--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
       <form action="companyProfile" method="post" id="companyProfileForm" name="companyProfileForm">
       <div class="col s6 l2 right-align">
-        <button type="submit" class="btn" name="submit" id="submit">Submit</button>
+        <button type="submit" class="waves-effect waves-dark-pink btn" name="submit" id="submit">Submit</button>
       </div>
       <div class="col s6 l2 right-align">
-        <button type="reset" class="btn" name="cancel" id="cancel">Cancel</button>
+        <button type="reset" class="waves-effect waves-dark-pink btn" name="cancel" id="cancel">Cancel</button>
       </div>
 
       <!-- <div class="col s12 l4 valign">
@@ -49,7 +49,7 @@
 <!-- Name -->
         <div class="row">
           <div class="input-field col s12">
-            <input id="name" type="text" class="validate">
+            <input id="name" name="name" type="text" class="validate" required="required">
             <label for="name">Name</label>
           </div>
         </div>
@@ -57,7 +57,7 @@
 <!-- Description -->
         <div class="row">
           <div class="input-field col s12">
-            <textarea id="description" class="materialize-textarea"></textarea>
+            <textarea id="description" name="description" class="materialize-textarea" required="required"></textarea>
             <label for="description">Description</label>
           </div>
         </div>
@@ -70,7 +70,7 @@
   <!-- Street -->
               <div class="row">
                 <div class="input-field col s12">
-                  <input id="street" type="text" class="validate">
+                  <input id="street" name="street" type="text" class="validate" required="required">
                   <label for="street">Street</label>
                 </div>
               </div>
@@ -78,7 +78,7 @@
   <!-- City -->
               <div class="row">
                 <div class="input-field col s12">
-                  <input id="city" type="text" class="validate">
+                  <input id="city" name="city" type="text" class="validate" required="required">
                   <label for="city">City</label>
                 </div>
               </div>
@@ -87,8 +87,8 @@
               <div class="row">
     <!-- Province -->
                 <div class="input-field col s7">
-                  <select>
-                    <option value="" disabled selected>Province</option>
+                  <select id="province" name="province" required="required">
+                    <option value="">Province</option>
                     <option value="1">Option 1</option>
                     <option value="2">Option 2</option>
                     <option value="3">Option 3</option>
@@ -97,7 +97,7 @@
                 </div>
     <!-- Postal Code -->
                 <div class="input-field col s5">
-                  <input id="postalCode" type="text" class="validate">
+                  <input id="postalCode" name="postalCode" type="text" class="validate" required="required">
                   <label for="postalCode">Postal Code</label>
                 </div>
               </div>
@@ -119,8 +119,8 @@
 <!-- Division -->
               <div class="row">
                 <div class="input-field col s5">
-                  <select>
-                    <option value="" disabled selected>Division</option>
+                  <select id="division" name="division" required="required">
+                    <option value="" selected>Division</option>
                     <option value="1">Option 1</option>
                     <option value="2">Option 2</option>
                     <option value="3">Option 3</option>
@@ -132,7 +132,7 @@
   <!-- Name -->
               <div class="row">
                 <div class="input-field col s10">
-                  <input id="name" type="text" class="validate">
+                  <input id="name" name="name" type="text" class="validate" required="required">
                   <label for="name">Name</label>
                 </div>
               </div>
@@ -140,7 +140,7 @@
   <!-- Questions -->
               <div class="row">
                 <div class="input-field col s10">
-                  <textarea id="questions" class="materialize-textarea"></textarea>
+                  <textarea id="questions" name="questions" class="materialize-textarea" required="required"></textarea>
                   <label for="questions">Questions</label>
                 </div>
               </div>
@@ -148,7 +148,7 @@
   <!-- Send Button -->
               <div class="row">
                 <div class="col s10">
-                  <button type="submit" class="btn" name="send" id="send">Send</button>
+                  <button type="submit" class="waves-effect waves-dark-pink btn" name="send" id="send">Send</button>
                 </div>
               </div>
   <!-- End of Send Button -->
