update container, col

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-xs-12 col-md-8">
 			<a class="site-logo" href="http://www.sociolla.com/" title="Sociolla">
 				<img class="logo img-responsive" src="http://img.sociolla.com/img/sociolla-1451533301.jpg" alt="Sociolla" style="width:170px;">
 			</a>
 			</div>
 
+<!-- company profile form -->
 			<form method="post" name="companyProfileForm" id="companyProfileForm" action="">
 			<div style="margin-top:10px">
-				<div class="col-md-2">
+				<div class="col-xs-10 col-md-2">
 					<button type="submit" class="btn btn-primary pull-right ">Submit</button>
 				</div>
-				<div class="col-md-2">
+				<div class="col-xs-2 col-md-2">
 					<button type="reset" class="btn btn-primary pull-right ">Cancel</button>
 				</div>
 			</div>
-
-			
 		</div>
+
 		<div class="row" style="padding-top: 5%;">
-			<div class="col-md-5">
+			<div class="col-xs-12 col-md-5">
 				<div class="form-group">
 					<label for="name">Name</label>
 					<input type="text" name="name" id="name" class="form-control">
@@ -72,7 +72,10 @@
 				</fieldset>
 			</div>
 			</form>
-			<div class="col-md-7">
+<!-- end of company profile form -->
+
+<!-- ask us form -->
+			<div class="col-xs-12 col-md-7">
 				<form method="post" name="askUs" id="askUs" action="">
 					<fieldset>
 						<legend>Ask Us</legend>
@@ -104,8 +107,8 @@
 					</fieldset>
 				</form>
 			</div>
+<!-- end of ask us form -->
 
-			
 		</div>
 	</div>
 
